Fix Touch for MegaMenu
Fix Touch for MegaMenu
Fix Joomla Toolbar overlap with MegaMenu in Backend

--- a/plugins/system/jat3v3/admin/megamenu/css/megamenu.css
+++ b/plugins/system/jat3v3/admin/megamenu/css/megamenu.css
@@ -162,6 +162,7 @@
   min-width: 200px;
   background: #f2f2f2;
   box-shadow: 1px 2px 5px rgba(0,0,0,.2);
+  z-index: 99; /* Fixed overlap with the Joomla Toolbar */
 }
 
 #ja-megamenu .dropdown-menu .dropdown-menu {
